--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
 	"description": "ESASky Python wrapper",
 	"keywords": [
 		"jupyter",
-		"widgets",
-		"ipython",
-		"ipywidgets",
-		"jupyterlab-extension"
+		"jupyterlab",
+		"jupyterlab-extension",
+		"widgets"
 	],
 	"homepage": "TBD",
 	"bugs": {
@@ -18,7 +17,7 @@
 	"main": "lib/index.js",
 	"repository": {
 		"type": "git",
-		"url": "TBD"
+		"url": "https://github.com/fab77/pyesasky"
 	},
 	"scripts": {
 		"build": "npm run build:nbextension",
@@ -62,7 +61,6 @@
 		"source-map-loader": "^0.2.1",
 		"typescript": "~2.4.2",
 		"webpack": "^3.4.1",
-		"@jupyterlab/coreutils": "^2.1.4",
 		"underscore": "^1.9.1"
 	},
 	"jupyterlab": {
