--- a/package.json
+++ b/package.json
@@ -27,16 +27,12 @@
 		"clean": "npm run clean:nbextension",
 		"clean:labextension": "rimraf pyesasky/labextension",
 		"clean:nbextension": "rimraf pyesasky/nbextension/static/index.js",
-		"test": "npm run test:firefox",
-		"test:chrome": "karma start --browsers=Chrome tests/karma.conf.js",
-		"test:debug": "karma start --browsers=Chrome --singleRun=false --debug=true tests/karma.conf.js",
-		"test:firefox": "karma start --browsers=Firefox tests/karma.conf.js",
-		"test:ie": "karma start --browsers=IE tests/karma.conf.js",
 		"watch": "npm-run-all -p watch:*",
 		"watch:nbextension": "webpack --watch"
 	},
 	"dependencies": {
-		"@jupyter-widgets/base": "^1.0.1"
+		"@jupyter-widgets/base": "^1.0.1",
+		"@jupyterlab/coreutils": "^2.2.1-alpha.0"
 	},
 	"devDependencies": {
 		"@phosphor/application": "^1.5.0",
@@ -47,21 +43,14 @@
 		"expect.js": "^0.3.1",
 		"fs-extra": "^4.0.2",
 		"json-loader": "^0.5.7",
-		"karma": "^1.7.0",
-		"karma-chrome-launcher": "^2.2.0",
-		"karma-firefox-launcher": "^1.0.1",
-		"karma-ie-launcher": "^1.0.0",
-		"karma-mocha": "^1.3.0",
-		"karma-mocha-reporter": "^2.2.3",
-		"karma-typescript": "^3.0.5",
 		"mkdirp": "^0.5.1",
-		"mocha": "^3.5.0",
+		"mocha": "^5.2.0",
 		"npm-run-all": "^4.1.1",
 		"rimraf": "^2.6.2",
 		"source-map-loader": "^0.2.1",
 		"typescript": "~2.4.2",
-		"webpack": "^3.4.1",
-		"underscore": "^1.9.1"
+		"underscore": "^1.9.1",
+		"webpack": "^3.4.1"
 	},
 	"jupyterlab": {
 		"extension": "lib/plugin"
