--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
 	},
 	"dependencies": {
 		"@jupyter-widgets/base": "^1.0.1",
-		"@jupyterlab/coreutils": "^2.2.1-alpha.0"
+		"@jupyterlab/coreutils": "^2.2.1"
 	},
 	"devDependencies": {
 		"@phosphor/application": "^1.5.0",
